# ai-mahjong

./: .gitignore  .hive-handoff.md  AGENTS.md  HANDOFF-2026-03-17.md  HANDOFF.md  LICENSE  README.md  README_EN.md  ai-simple.js  ai-xiaohong.ts  ai-zili.js  ajie-agent.js  ajie-client.js  app-backup.tsx  app-icon-preview.html  baize-client.js  baize-output.txt  check-room.js  create-game.js  gomoku.html  index.html  litong-agent.js  litong-client.js  llm-config.example.json  package-lock.json  package.json  screenshot-full.js  screenshot-game.js  screenshot-v2.js  screenshot-v3.js  screenshot-v4.js  screenshot-with-ai.js  screenshot.js  temp_engine.ts  test-join.js  tsconfig.json  ui-analysis-report.md  vite.client-new.config.ts  vite.config.ts  write_lobby.py  (+9 more)
.mnemo/: ses_2fff9264dffexamDkIOlB1xEhV.json  ses_2fffa5c12ffeSjRnF3yDbj1WEo.json  ses_3004ced8affenSLx6Rj5Cpcsvb.json  ses_300737d56ffeJA36i1KRLNmNoq.json  ses_300cd766affeb467VTLWIaDuMp.json  ses_3011750a8ffeXgKZn8Vds28aY1.json  ses_30edfee4cffe8PDpjG5j82pvQN.json
.openhive/: openhive.db-shm  openhive.db-wal
UI/: mahjong_game-牌型参考.html  mahjong_game.html
docs/: BUGFIX-游戏自动开始.md  CHANGELOG.md  LOG-2026-03-05.md  PROJECT-STATUS.md  TEST-LOG-2026-03-09.md  ai-agent-integration-design.md  ai-agent-integration-tasks.md  ai-agent-prompt-design.md  ai-mahjong-requirements.md  ai-mahjong-tech-spec.md  ai-player-architecture.md  architecture-analysis.md  iteration-plan.md  (+1 more)
src-tauri/: Cargo.toml  settings.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  sidecar.rs  tray.rs
(+230 files in other folders)
